--- a/Andropid UI/app/src/main/res/layout/test_activity.xml
+++ b/Andropid UI/app/src/main/res/layout/test_activity.xml
@@ -16,6 +16,7 @@
         app:contentPaddingTop="10dp">
 
         <LinearLayout
+            android:id="@+id/card_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -40,7 +41,7 @@
                     android:text="Claim Title" />
 
                 <EditText
-                    android:id="@+id/editTextTextPersonName10"
+                    android:id="@+id/claim_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -62,7 +63,7 @@
                     android:text="Date" />
 
                 <EditText
-                    android:id="@+id/editTextTextPersonName12"
+                    android:id="@+id/date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -77,7 +78,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/add_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
@@ -97,7 +98,7 @@
                         android:text="Status: " />
 
                     <EditText
-                        android:id="@+id/editTextTextPersonName13"
+                        android:id="@+id/status"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
